refactor: 운영자 로그인 API 제거
